--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-group=io.sapphiremc.sapphire
-version=1.20.2-R0.1-SNAPSHOT
+group=org.ospaindustries.dice
+version=1.20.4-R0.1-SNAPSHOT
 
-mcVersion=1.20.2
-pufferfishRef=003a28a5dc785ecb8347718dbc59e348d139d33b
+mcVersion=1.20.4
+pufferfishRef=8043ed71dd06722017927a5462fdb11ba0b4ed63
 
 org.gradle.caching=true
 org.gradle.parallel=true
